force-app/main/default/objects/Builder_Pricing_Line__c/Builder_Pricing_Line__c.object-meta.xml
<CustomObject>
    <label>Builder Pricing Line</label>
    <nameField>
        <label>Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Builder Pricing Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>