force-app/main/default/objects/Builder_Pricing_Line__c/fields/Builder_Pricing_Book__c.field-meta.xml
<CustomField>
    <fullName>Builder_Pricing_Book__c</fullName>
    <label>Builder Pricing Book</label>
    <referenceTo>Builder_Pricing_Book__c</referenceTo>
    <relationshipName>Pricing_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>