force-app/main/default/objects/Builder_Pricing_Line__c/fields/Item_Catalog__c.field-meta.xml
<CustomField>
    <fullName>Item_Catalog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links this pricing line to the cost book item. Enables Standard_Cost__c to be pulled from Item_Catalog__c for margin calculations on quotes.</description>
    <label>Item Catalog</label>
    <referenceTo>Item_Catalog__c</referenceTo>
    <relationshipLabel>Pricing Lines</relationshipLabel>
    <relationshipName>Pricing_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>