force-app/main/default/objects/Builder_Pricing_Line__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sq Ft</fullName>
                <default>true</default>
                <label>Sq Ft</label>
            </value>
            <value>
                <fullName>Each</fullName>
            </value>
            <value>
                <fullName>Linear Ft</fullName>
            </value>
            <value>
                <fullName>Acre</fullName>
            </value>
            <value>
                <fullName>Gallon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>